fix nav on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,68 @@ body{
     }
 }
 
+
+.red-tooltip { border-top-color: #fff;}
+.red-tooltip + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.red-tooltip + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #EBB614;
+    background-color: #fff;
+    color: #EBB614;
+},
+.tooltip-arrow{ border-top-color: #fff; color:#fff;}
+.tooltip2 + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.tooltip2 + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #ACB7A8;
+    background-color: #fff;
+    color: #ACB7A8;
+},
+.tooltip-arrow{ border-top-color: #fff; color:#fff;}
+.tooltip3 + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.tooltip3 + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #4F795B;
+    background-color: #fff;
+    color: #4F795B;
+},
+.tooltip-arrow{ border-top-color: #fff; color:#fff;}
+.tooltip4 + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.tooltip4 + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #B9B6AE;
+    background-color: #fff;
+    color: #B9B6AE;
+},
+.tooltip-arrow{ border-top-color: #fff; color:#fff;}
+.tooltip5 + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.tooltip5 + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #4A87A2;
+    background-color: #fff;
+    color: #4A87A2;
+},
+.tooltip-arrow{ border-top-color: #fff; color:#fff;}
+.tooltip6 + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.tooltip6 + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #121929;
+    background-color: #fff;
+    color: #121929;
+},
+.tooltip-arrow{ border-top-color: #fff; color:#fff;}
+.tooltip7 + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.tooltip7 + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #01637A;
+    background-color: #fff;
+    color: #01637A;
+},
+.tooltip-arrow{ border-top-color: #fff; color:#fff;}
+.tooltip8 + .tooltip.top > .tooltip-arrow { border-top-color: #fff;}
+.tooltip8 + .tooltip > .tooltip-inner { 
+    font-size: 16px;
+    border: 2px solid #13192E;
+    background-color: #fff;
+    color: #13192E;
+}
